make \n work with (img)inputbox and (new)password

Note that \n in password prompts are converted to spaces due to
bug#427141.
BUG: 352981